--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,15 @@
 
 body {
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
   padding: 2.5%;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'EB Garamond', serif;
+  background:url("./assets/Twitter-Background.png");
 }
+
+.profile {
+  width: 200px;
+  height: 300px;
+  border-radius: 8px;
+}
+
