--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
   text-align: center;
   font-size: 20px;
   padding: 2.5%;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Roboto Mono', monospace;
   background:url("./assets/Twitter-Background.png");
 }
 
