--- a/src/index.scss
+++ b/src/index.scss
@@ -6,15 +6,15 @@ body {
   text-align: center;
   font-size: 20px;
   padding: 2.5%;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Kanit', sans-serif;
   background:url("./assets/Twitter-Background.png");
 }
 
-.profile {
+/*.profile {
   width: 200px;
   height: 300px;
   border-radius: 8px;
-}
+}*/
 .title-fade-out{
   opacity: 0;
   animation-name: fade-out;
